# datahowlab-sdk-python

./: .buildinfo  .gitignore  .openapi-generator-config.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  MIGRATION_GUIDE.md  README.md  V2_COMPLETION_SUMMARY.md  dhl_sdk.html  examples.ipynb  flake.nix  genindex.html  index.html  mkdocs.yml  modules.html  objects.inv  openapi.json  pyproject.toml  schema.md  search.html  searchindex.js  validations.md
.doctrees/: dhl_sdk.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: documentation.yml  publish.yml  testing.yml
_sources/: dhl_sdk.rst.txt  modules.rst.txt
dhl_sdk/: __init__.py  _constants.py  _input_processing.py  _spectra_utils.py  _utils.py  authentication.py  client.py  crud.py  db_entities.py  entities.py  error_handler.py  errors.py  exceptions.py  importers.py  models.py  pagination.py  py.typed  services.py  types.py  validators.py
dhl_sdk/_deprecated/: README.md  __init__.py  entities.py
dhl_sdk/entities/: __init__.py  experiment.py  model.py  model_experiment.py  model_variable.py  product.py  project.py  variable.py  variable_group.py
docs/: conf.py  dhl_sdk.rst  index.md  index.rst  migration.md  validations.md
docs/api/: client.md  errors.md  models.md  types.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: client.md  errors.md  experiments.md  predictions.md  products.md  recipes.md  variables.md
examples/: README.md  cleanup.py  data_access.py  data_access_compat.py  example_config.py  experiment_upload.py  experiment_upload_compat.py  fixme_experiment_upload.py  model_prediction.py  model_prediction_compat.py  product_creation.py  quick_start.py  sdk_v2_comprehensive_examples.ipynb
libs/datahowlab-api-types/: README.md  pyproject.toml
libs/datahowlab-api-types/src/api_types/: helpers.py  public.py
tests/: conftest.py  test_client.py  test_client_edge_cases_v2.py  test_db_client.py  test_entities.py  test_errors_v2.py  test_integration_v2.py  test_models_v2.py  test_services_v2.py  test_types_v2.py  test_utils.py  test_validation_errors.py
tests/entities/: _fixtures.py  test_experiment.py  test_model.py  test_model_experiment.py  test_model_variable.py  test_product.py  test_project.py  test_variable.py  test_variable_group.py
