[project]
name = "datahowlab-sdk"
version = "0.4.0"
description = "The DataHowLab SDK for Python"
authors = [{ name = "DataHow", email = "feedback@datahow.ch" }]
requires-python = ">=3.9, <=3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
  "datahowlab-api-types",
  "pydantic>=2.4.2,<3",
  "requests>=2.31.0,<3",
  "numpy>=1.26.1,<2",
]

[project.urls]
Homepage = "https://datahow.ch/"
Source = "https://github.com/DataHow/datahowlab-sdk-python"

[dependency-groups]
dev = [
  "Sphinx>=5.3.0,<6",
  "nbsphinx>=0.8.9,<0.9",
  "sphinx-rtd-theme>=1.1.1,<2",
  "autodoc-pydantic>=2.0.1,<3",
  "pytest~=7.4",
  "pytest-cov>=3.0.0,<4",
  "ipykernel>=6.26.0,<7",
  "matplotlib>=3.8.1,<4",
  "ruff>=0.11.0",
]

[tool.uv.sources]
dhl_api = { workspace = true }

[tool.uv.workspace]
members = ["dhl_api"]

[tool.hatch.build]
packages = ["dhl_sdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140

[tool.pyright]
typeCheckingMode = "basic"
